--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calvin | Full Stack Developer Portfolio</title>
+  <title>Calvin | Portfolio</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="../src/index.js"></script>
+  <script type="module" src="../src/index.jsx"></script>
 </body>
 
 </html>
